--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2021"
 description = "Pure post-quantum multi-recipient encryption: Kyber-1024 + Dilithium-3 + XChaCha20-Poly1305 with a stable, versioned wire format"
 license = "Apache-2.0"
-repository = "https://github.com/your-org/tholos-pq"
+repository = "https://github.com/thanos/tholos-pq"
+authors = ["Thanos Vassilakis <thanosv@gmail.com>"]
+keywords = ["cryptography", "post-quantum", "encryption", "ml-kem", "dilithium", "multi-recipient"]
+categories = ["cryptography", "encoding"]
+readme = "README.md"
+documentation = "https://docs.rs/tholos-pq"
 
 
 [dependencies]
